# tree-sitter-inform6

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-Inform6.h  tree-sitter-Inform6.pc.in  tree-sitter-inform6.h  tree-sitter-inform6.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_inform6/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
language_examples/: advent.inf
src/: grammar.json  node-types.json  parser.c
test/corpus/: array.txt  binary_expressions.txt  comment.txt  compiler_defines.txt  conditionals.txt  constant.txt  global.txt  grammar.txt  loops.txt  number.txt  objects.txt  print.txt  routine.txt  statements.txt  string.txt
