[package]
name = "tree-sitter-inform6"
description = "Inform6 grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "inform6"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Or4c/tree-sitter-inform6"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
